# notarial-messaging

./: .env.example  .gitignore  Cargo.toml  README.md
crates/demo-cli/: Cargo.toml
crates/demo-cli/src/: bootstrap.rs  client.rs  cmd_scenario.rs  crypto.rs  identity.rs  main.rs
crates/localpki-core/: Cargo.toml
crates/localpki-core/src/: authentication.rs  cert.rs  crypto.rs  enrollment.rs  error.rs  lib.rs  revocation.rs
crates/messaging-crypto/: Cargo.toml
crates/messaging-crypto/src/: error.rs  keys.rs  lib.rs  merkle.rs  messages.rs
crates/server/: Cargo.toml  diesel.toml
crates/server/migrations/2026-06-15-093413_init/: down.sql  up.sql
crates/server/migrations/2026-06-15-100910_add_sessions/: up.sql
crates/server/migrations/2026-06-17-000000_add_identity_role/: down.sql  up.sql
crates/server/migrations/2026-06-18-120000_unique_message_nonce/: down.sql  up.sql
crates/server/src/: config.rs  db.rs  en.rs  error.rs  hsm.rs  main.rs  middleware.rs  routes.rs  state.rs  tests.rs  utils.rs
crates/server/src/db/: models.rs  schema.rs
crates/server/src/en/: auth.rs  registry.rs
crates/server/src/routes/: actes.rs  authentication.rs  enrollment.rs  messages.rs  participants.rs  revocation.rs  ws.rs
docs/: ARCHITECTURE.md  CRYPTO_REVIEW.md  DEMO.md  METHODOLOGIE.md  SOFTWARE_ARCHITECTURE.md
frontend/: .env.example  package.json  pnpm-lock.yaml
frontend/src/lib/api/: client.ts
frontend/src/lib/crypto/: auth.ts  ecies.ts  enrollment.ts  keys.ts  messages.ts
frontend/src/lib/stores/: actes.ts  identity.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/actes/: +page.svelte
frontend/src/routes/actes/[id]/: +page.svelte
frontend/src/routes/auth/: +page.svelte
frontend/src/routes/enroll/: +page.svelte
frontend/src/routes/notaire/actes/: +page.svelte
frontend/src/routes/notaire/actes/new/: +page.svelte
frontend/src/routes/notaire/enroller/: +page.svelte
