[package]
name = "demo-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "demo-cli"
path = "src/main.rs"

[dependencies]
localpki-core    = { path = "../localpki-core" }
messaging-crypto = { path = "../messaging-crypto" }
tokio            = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
ed25519-dalek    = { workspace = true }
x25519-dalek     = { workspace = true }
base64           = { workspace = true }
uuid             = { workspace = true }
zeroize          = { workspace = true, features = ["derive"] }
sha2             = { workspace = true }
rand             = { workspace = true }
thiserror        = { workspace = true }
clap             = { version = "4", features = ["derive"] }
reqwest          = { version = "0.12", features = ["json"] }
colored          = "2"
indicatif        = "0.17"
anyhow           = "1"
hex              = "0.4"
dotenvy          = "0.15"
rusqlite         = { version = "0.31", features = ["bundled"] }
