[package]
name = "localpki-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { workspace = true, features = ["pkcs8", "pem", "zeroize", "rand_core", "serde"] }
x25519-dalek  = { workspace = true, features = ["static_secrets", "zeroize"] }
sha2          = { workspace = true }
rand          = { workspace = true }
serde         = { workspace = true }
zeroize       = { workspace = true, features = ["derive"] }
thiserror     = { workspace = true }
hkdf          = {workspace = true}

aes-gcm       = "0.10"


# Génération et parsing de certificats X.509v3 auto-signés (format LocalPKI)
rcgen         = "0.13"
x509-cert     = { version = "0.2", features = ["builder"] }
time          = "0.3"
